@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.50
-releasedate		20050203
+releasedate		20050204
 
 ##############################################################################
 # host dependent configuration
